<resources>
    <string name="app_name">SosCoords</string>
    <string name="current_placeholder">Current: </string>
    <string name="shared_pref_key">com.pcchin.soscoords.shared_pref_key</string>
    <string name="blank" />

    <!-- Shared preferences keys -->
    <string name="send_checkbox_checked">send_checkbox_checked</string>
    <string name="receive_checkbox_checked">receive_checkbox_checked</string>
    <string name="secret_code_input">secret_code_input</string>

    <!-- Main Menu strings -->
    <string name="main_menu_title_text">SOS Coordinates Sender</string>
    <string name="main_menu_top_button">Enter Secret Code</string>
    <string name="main_menu_top_button_content">Current: %1$s</string>
    <string name="main_menu_bottom_button">Select Contacts</string>
    <string name="main_menu_top_check">Activate when code sent</string>
    <string name="main_menu_bottom_check">Activate when code received</string>
    <string name="main_menu_about_button">About</string>

    <!-- About Menu strings -->
    <string name="about_menu_button">&lt; Return</string>
    <string name="about_menu_text">
        <b> Auto SOS Coordinates Sender
        &#xA;&#xD; Version 0.4
        &#xA;&#xD; Made by PC Chin </b>
        &#xA;&#xD; &#xA;&#xD; By sending a specific code to a specific person or vice versa,
        that person would be able to receive your current GPS coordinates.
    </string>
    <string name="service_description">Background process of SosCoords. It checks new messages for the secret code.</string>

    <!-- Code Input strings -->
    <string name="code_menu_left_button">&lt; Cancel</string>
    <string name="code_menu_right_button">Save &#38; Return &gt;</string>
    <string name="code_menu_top_text">Enter Secret Code</string>
    <string name="code_menu_bottom_text" />

    <!-- Contact List strings -->
    <string name="contact_list_left_button">&lt; Cancel</string>
    <string name="contact_list_right_button">Save &#38; Return &gt;</string>
    <string name="contact_list_title">Select Contacts</string>

    <!-- Popup strings -->
    <string name="loading_popup_text">Loading…</string>
    <string name="exit_popup_title">Exit</string>
    <string name="exit_popup_message">Exit app?</string>
    <string name="exit_popup_left_button">Cancel</string>
    <string name="exit_popup_right_button">Quit</string>
</resources>
