<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/codeMenuLeftButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/code_menu_left_button"
            android:textSize="20sp"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/codeMenuRightButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/code_menu_right_button"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/codeMenuTopText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:gravity="center"
        android:text="@string/code_menu_top_text"
        android:textSize="24sp" />

    <!-- TODO: This widget depends on storeInfo and readInfo -->
    <EditText
        android:id="@+id/codeMenuEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="text|textNoSuggestions"
        android:text="@string/placeholder_temp_code" />

    <TextView
        android:id="@+id/codeMenuBottomText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05"
        android:text="@string/code_menu_bottom_text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6" />
</LinearLayout>